# adk-samples

./: CLAUDE.md  README.md
.github/workflows/: checks.yml  gemini-pr-review.yml  ruff-checks.yml
python/: README.md
python/agents/Plumber-Data-Engineering-Assistant/: README.md  requirements.txt
python/agents/Plumber-Data-Engineering-Assistant/plumber_agent/: agent.py
python/agents/Plumber-Data-Engineering-Assistant/plumber_agent/sub_agents/dataflow_agent/: agent.py  constants.py  prompts.py  utils.py
python/agents/Plumber-Data-Engineering-Assistant/plumber_agent/sub_agents/dataproc_agent/: agent.py  constants.py  prompts.py
python/agents/Plumber-Data-Engineering-Assistant/plumber_agent/sub_agents/dataproc_template_agent/: agent.py  constants.py  prompts.py  utils.py
python/agents/Plumber-Data-Engineering-Assistant/plumber_agent/sub_agents/dbt_agent/: agent.py  prompts.py
python/agents/RAG/: README.md  pyproject.toml
python/agents/RAG/tests/integration/: test_agent.py  test_server_e2e.py
python/agents/antom-payment/antom-payemnt-agent/: agent.py
python/agents/bidi-demo/app/static/: index.html
python/agents/retail-ai-location-strategy/: DEVELOPER_GUIDE.md  IMPLEMENTATION_TRACKER.md  README.md
python/agents/retail-ai-location-strategy/app/: config.py
python/agents/retail-ai-location-strategy/app/frontend/: IMPLEMENTATION_PLAN.md  README.md
python/agents/short-movie-agents/: .env-template
python/agents/story_teller/: pyproject.toml
python/agents/story_teller/story_teller_agent/: agent.py  instructions.py
(+27 files in other folders)
